Added homepage in backend

--- a/backend/AU/templates/pages/index.html
+++ b/backend/AU/templates/pages/index.html
@@ -74,4 +74,261 @@
       </div>
     </div>
   </section>
+
+  <!---Services section-->
+  <section class="section services-section" id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg">
+                <div class="section-title">
+                    <h2>Explore Our Services</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- feaure box -->
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                      <i class="fa fa-users" aria-hidden="true"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Admission Counselling</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- / -->
+            <!-- feaure box -->
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                      <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Scholarship Information</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- / -->
+            <!-- feaure box -->
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                      <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Student Visa Extension</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm-6 col-lg-4">
+              <div class="feature-box-1">
+                  <div class="icon">
+                      <i class="fa fa-desktop"></i>
+                  </div>
+                  <div class="feature-content">
+                      <h5>PSW/Temporary Graduate Visa</h5>
+                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4">
+            <div class="feature-box-1">
+                <div class="icon">
+                  <i class="fa fa-university" aria-hidden="true"></i>
+                </div>
+                <div class="feature-content">
+                    <h5>Course & University Selection</h5>
+                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-4">
+          <div class="feature-box-1">
+              <div class="icon">
+                <i class="fa fa-cc-visa" aria-hidden="true"></i>
+              </div>
+              <div class="feature-content">
+                  <h5>Visa Support</h5>
+                  <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="feature-box-1">
+            <div class="icon">
+              <i class="fa fa-cogs" aria-hidden="true"></i>
+            </div>
+            <div class="feature-content">
+                <h5>Migration Services</h5>
+                <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4">
+      <div class="feature-box-1">
+          <div class="icon">
+            <i class="fa fa-globe" aria-hidden="true"></i>
+          </div>
+          <div class="feature-content">
+              <h5>Professional Year Program</h5>
+              <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+          </div>
+      </div>
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <div class="feature-box-1">
+        <div class="icon">
+            <i class="fa fa-desktop"></i>
+        </div>
+        <div class="feature-content">
+            <h5>OSHC</h5>
+            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+  </section>
+
+  <!---Blog section-->
+  <section class="blog-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg">
+          <div class="section-title"><h2>Latest News</h2></div>
+        </div>
+      </div>
+    </div>
+</div>
+<div class="blog-slider">
+  <div class="blog-slider__wrp swiper-wrapper">
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        
+        <img src="{% static 'img/img1.jpg' %}" alt="">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">26 December 2019</span>
+        <div class="blog-slider__title">Lorem Ipsum Dolor</div>
+        <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+        <a href="#" class="blog-slider__button">READ MORE</a>
+      </div>
+    </div>
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        <img src="{% static 'img/img2.jpg' %}" alt="">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">26 December 2019</span>
+        <div class="blog-slider__title">Lorem Ipsum Dolor2</div>
+        <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+        <a href="#" class="blog-slider__button">READ MORE</a>
+      </div>
+    </div>
+    
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        <img src="{% static 'img/img3.jpg' %}" alt="">
+      </div>
+      <div class="blog-slider__content">
+        <span class="blog-slider__code">26 December 2019</span>
+        <div class="blog-slider__title">Lorem Ipsum Dolor</div>
+        <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+        <a href="#" class="blog-slider__button">READ MORE</a>
+      </div>
+    </div>
+    
+  </div>
+  <div class="blog-slider__pagination"></div>
+</div>
+</section>
+
+<!--Client section-->
+
+<section class="client-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg">
+          <div class="section-title"><h2>Our Universities</h2></div>
+        </div>
+      </div>
+       <section class="customer-logos slider">
+          <div class="slide"><img src="https://image.freepik.com/free-vector/luxury-letter-e-logo-design_1017-8903.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/3d-box-logo_1103-876.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/blue-tech-logo_1103-822.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/colors-curl-logo-template_23-2147536125.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/football-logo-background_1195-244.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/background-of-spots-halftone_1035-3847.jpg"></div>
+          <div class="slide"><img src="https://image.freepik.com/free-vector/retro-label-on-rustic-background_82147503374.jpg"></div>
+       </section>
+    </div>
+  </section>
+
+  <!--Testimonial-->
+  <section class="box-area">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-lg">
+          <div class="section-title"><h2>Testimonial</h2></div>
+        </div>
+        <div class="col-md-12">
+          <div class="tes-area" id="tes-area">
+            <div class="tes-item">
+              <div class="img-area">
+                <img src="{% static 'img/gallery2.jpeg' %}" alt="">
+              </div>
+              <div class="name">Jack Doe</div>
+              <div class="designation">Developer</div>
+              <div class="tes-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
+                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
+                </p>
+              </div>
+            </div>
+
+            <div class="tes-item">
+              <div class="img-area">
+                <img src="{% static 'img/image-john.jpg' %}" alt="">
+              </div>
+              <div class="name">Jack Doe</div>
+              <div class="designation">Student</div>
+              <div class="tes-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
+                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
+                </p>
+              </div>
+            </div>
+
+            <div class="tes-item">
+              <div class="img-area">
+                <img src="{% static 'img/image-tanya.jpg' %}" alt="">
+              </div>
+              <div class="name">Jack Doe</div>
+              <div class="designation">Developer</div>
+              <div class="tes-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
+                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
