--- a/backend/AU/templates/pages/index.html
+++ b/backend/AU/templates/pages/index.html
@@ -1,44 +1,59 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% endblock %}
 {% block content %}
 <!---Hero slider-->
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      {% for img in heroSlider %}
+        {% if forloop.counter0 == 0 %}
+          <button 
+            type="button" 
+            data-bs-target="#carouselExampleIndicators" 
+            data-bs-slide-to="{{forloop.counter0}}" 
+            class="active" 
+            aria-current="true" 
+            aria-label="Slide {{forloop.counter0}}">
+          </button>
+        {% else %}
+          <button 
+            type="button" 
+            data-bs-target="#carouselExampleIndicators" 
+            data-bs-slide-to="{{forloop.counter0}}" 
+            aria-label="Slide {{forloop.counter0}}"
+          ></button>
+        {% endif %}
+      {% endfor %}
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'img/img1.jpg' %}" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="animated bounceInRight" style="animation-delay:1s">Creative Agency</h2>
-          <p class="animated bounceInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
-            assumenda fugiat vel passet
-          </p>
-          <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+      {% for img in heroSlider %}
+        {% if forloop.counter0 == 0 %}
+          <div class="carousel-item active">
+            <img src="{{img.slider_image.url}}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="animated bounceInRight" style="animation-delay:1s">Creative Agency</h2>
+              <p class="animated bounceInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+                assumenda fugiat vel passet
+              </p>
+              <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+            </div>
+          </div>
+        {% else %}
+        <div class="carousel-item">
+          <img src="{{img.slider_image.url}}" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h2 class="animated zoomIn" style="animation-delay: 1s">Multiple Awards</h2>
+            <p class="animated fadeInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+              assumenda fugiat vel passet
+            </p>
+            <p class="animated zoomIn"><a href="#">Contact Us</a></p>
+          </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/img2.jpg' %}" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="animated slideInDown" style="animation-delay: 1s">Reputed Worldwide</h2>
-          <p class="animated fadeInUp" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
-            assumenda fugiat vel passet
-          </p>
-          <p class="animated zoomIn" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/img3.jpg' %}" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="animated zoomIn" style="animation-delay: 1s">Multiple Awards</h2>
-          <p class="animated fadeInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
-            assumenda fugiat vel passet
-          </p>
-          <p class="animated zoomIn"><a href="#">Contact Us</a></p>
-        </div>
-      </div>
+        {% endif %}
+      {% endfor %}
+     
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -263,72 +278,41 @@
         </div>
       </div>
        <section class="customer-logos slider">
-          <div class="slide"><img src="https://image.freepik.com/free-vector/luxury-letter-e-logo-design_1017-8903.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/3d-box-logo_1103-876.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/blue-tech-logo_1103-822.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/colors-curl-logo-template_23-2147536125.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/football-logo-background_1195-244.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/background-of-spots-halftone_1035-3847.jpg"></div>
-          <div class="slide"><img src="https://image.freepik.com/free-vector/retro-label-on-rustic-background_82147503374.jpg"></div>
-       </section>
+          {% for logo in universityLogos %}
+            <div class="slide"><img src="{{logo.university_logo.url}}"></div>
+          {% endfor %}
+        </section>
     </div>
   </section>
 
   <!--Testimonial-->
   <section class="box-area">
     <div class="container">
-
       <div class="row">
         <div class="col-lg">
           <div class="section-title"><h2>Testimonial</h2></div>
         </div>
         <div class="col-md-12">
           <div class="tes-area" id="tes-area">
-            <div class="tes-item">
-              <div class="img-area">
-                <img src="{% static 'img/gallery2.jpeg' %}" alt="">
+            {% for review in testimonials %}
+              <div class="tes-item">
+                <div class="img-area">
+                  <img src="{{review.reviewer_image.url}}" alt="">
+                </div>
+                <div class="name">{{review.reviewer_name}}</div>
+                <div class="designation">Student</div>
+                <div class="tes-text">
+                  <p>
+                    {{review.reviewer_description}}
+                  </p>
+                </div>
               </div>
-              <div class="name">Jack Doe</div>
-              <div class="designation">Developer</div>
-              <div class="tes-text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
-                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
-                </p>
-              </div>
-            </div>
-
-            <div class="tes-item">
-              <div class="img-area">
-                <img src="{% static 'img/image-john.jpg' %}" alt="">
-              </div>
-              <div class="name">Jack Doe</div>
-              <div class="designation">Student</div>
-              <div class="tes-text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
-                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
-                </p>
-              </div>
-            </div>
-
-            <div class="tes-item">
-              <div class="img-area">
-                <img src="{% static 'img/image-tanya.jpg' %}" alt="">
-              </div>
-              <div class="name">Jack Doe</div>
-              <div class="designation">Developer</div>
-              <div class="tes-text">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
-                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
-                </p>
-              </div>
-            </div>
+            {% endfor %}
           </div>
         </div>
       </div>
     </div>
   </section>
-{% endblock %}
+  {% endblock %} {% block script %}
+  <script src="{% static 'js/index.js' %}"></script>
+  {% endblock %}
