--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="./blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./gallery.html">Gallery</a>
+            <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact Us</a>
