Making About Team Dyanamic

--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -15,9 +15,9 @@
               About Us
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./about.html">About Company</a></li>
-              <li><a class="dropdown-item" href="./ourteam.html">Meet Our Team</a></li>
-              <li><a class="dropdown-item" href="./mesagefromceo.html">Message From CEO</a></li>
+              <li><a class="dropdown-item" href="{% url 'about' %}">About Company</a></li>
+              <li><a class="dropdown-item" href="{% url 'meetteam' %}">Meet Our Team</a></li>
+              <li><a class="dropdown-item" href="{% url 'MessageFromCEO' %}">Message From CEO</a></li>
               <li><a class="dropdown-item" href="./messagefromdirector.html">Message From Director</a></li>
             </ul>
           </li>
@@ -26,7 +26,7 @@
               Our Services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./service.html">Services</a></li>
+              <li><a class="dropdown-item" href="{% url 'service' %}">Services</a></li>
               <li><a class="dropdown-item" href="./serviceDetail.html">Migration</a></li>
             </ul>
           </li>
@@ -40,7 +40,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./blog.html">Blog</a>
+            <a class="nav-link" href="{% url 'blog' %}">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
