--- a/backend/AU/templates/pages/meetourteam.html
+++ b/backend/AU/templates/pages/meetourteam.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/ourteam.css' %}">
+{% endblock %}
 {% block content %}
  <!--team------------------------>
  <section id="team">
@@ -8,271 +11,49 @@
     <!--team-container---------->
     <div class="team-box-container">
         <!--member-box-1--->
-        <div class="member-box member-1">
+        {% for aboutTeam in aboutteam %}
+        <div class="member-box member-{{forloop.counter}}">
             <!--img---->
             <div class="member-img">
                 <!--front-img-->
-                <img src="{% static 'img/img4.jpg' %}">
+                <img src="{{aboutTeam.profile_photo.url}}">
                 <!--hover-img-->
-                <img class="hover-img" src="{% static 'img/img3.jpg' %}">
+                <img class="hover-img" src="{{aboutTeam.hover_profile_photo.url}}">
             </div>
             <!--text----->
             <div class="member-name">
-                <h3>Daniel Radcliffe</h3>
-                <h5>Executive Director | Tech & Creative Lead</h5>
+                <h3>{{aboutTeam.name}}</h3>
+                <h5>{{aboutTeam.job_title}}</h5>
             </div>
         </div>
-        <!--member-box-2--->
-        <div class="member-box member-2">
-            <!--img---->
-            <div class="member-img">
-                <!--front-img-->
-                <img src="./img/img2.jpg">
-                <!--hover-img-->
-                <img class="hover-img" src="./img/img4.jpg">
-            </div>
-            <!--text----->
-            <div class="member-name">
-                <h3>Daniel Radcliffe</h3>
-                <h5>Executive Director | Tech & Creative Lead</h5>
-            </div>
-        </div>
-        <!--member-box-3--->
-        <div class="member-box member-3">
-            <!--img---->
-            <div class="member-img">
-                <!--front-img-->
-                <img src="{% static 'img/img4.jpg' %}">
-                <!--hover-img-->
-                <img class="hover-img" src="{% static 'img/img3.jpg' %}">
-            </div>
-            <!--text----->
-            <div class="member-name">
-                <h3>Daniel Radcliffe</h3>
-                <h5>Executive Director | Tech & Creative Lead</h5>
-            </div>
-        </div>
-        <!--member-box-4--->
-        <div class="member-box member-4">
-            <!--img---->
-            <div class="member-img">
-                <!--front-img-->
-                <img src="./img/image-tanya.jpg">
-                <!--hover-img-->
-                <img class="hover-img" src="./img/img4.jpg">
-            </div>
-            <!--text----->
-            <div class="member-name">
-                <h3>Daniel Radcliffe</h3>
-                <h5>Executive Director | Tech & Creative Lead</h5>
-            </div>
-        </div>
-        <!--member-box-5--->
-        <div class="member-box member-5">
-            <!--img---->
-            <div class="member-img">
-                <!--front-img-->
-                <img src="./img/img4.jpg">
-                <!--hover-img-->
-                <img class="hover-img" src="./img/image-tanya.jpg">
-            </div>
-            <!--text----->
-            <div class="member-name">
-                <h3>Daniel Radcliffe</h3>
-                <h5>Executive Director | Tech & Creative Lead</h5>
-            </div>
-        </div>
-        <!--member-box-6--->
-        <div class="member-box member-6">
-            <!--img---->
-            <div class="member-img">
-                <!--front-img-->
-                <img src="./img/img4.jpg">
-                <!--hover-img-->
-                <img class="hover-img" src="./img/image-tanya.jpg">
-            </div>
-            <!--text----->
-            <div class="member-name">
-                <h3>Daniel Radcliffe</h3>
-                <h5>Executive Director | Tech & Creative Lead</h5>
-            </div>
-        </div>
+        {% endfor %}
         <!--detail-box-1----------------------------->
-        <div class="detail-box-1">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="{% static 'img/img4.jpg' %}">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--cancel-btn---->
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <!--name-->
-                    <a href="#" class="detail-name">Daniel Radcliffe</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
+        {% for aboutTeam in aboutteam %}
+            <div class="detail-box-{{forloop.counter}}">
+                <div class="member-detail-box">
+                    <!--img---->
+                    <div class="detail-box-img">
+                        <img src="{{aboutTeam.profile_photo.url}}">
                     </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with full stack development skills on the side. Share your ideas with him and he will make it happen.</p>
+                    <!--text-->
+                    <div class="detail-box-text">
+                        <!--cancel-btn---->
+                        <a href="javascript:void(0);" class="cancel">
+                            <i class="fas fa-times"></i>
+                        </a>
+                        <!--name-->
+                        <a href="#" class="detail-name">{{aboutTeam.name}}</a>
+                        <!--position---->
+                        <h5 class="position">Position: {{aboutTeam.job_title}}</h5>
+                        <!--details--->
+                        <p>{{aboutTeam.job_descriptions}}</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--detail-box-2---------------------------->
-        <div class="detail-box-2">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="./img/img1.jpg">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--cancel-btn---->
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <!--name-->
-                    <a href="#" class="detail-name">Daniel Radcliffe</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
-                  
-                
-                        
-                      
-                    </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with full stack development skills on the side. Share your ideas with him and he will make it happen.</p>
-           
-                
-                </div>
-            </div>
-        </div>
-        <!--detail-box-3----------------------------->
-        <div class="detail-box-3">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="./img/img1.jpg">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--cancel-btn---->
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <!--name-->
-                    <a href="#" class="detail-name">Daniel Radcliffe</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
-                  
-                
-                        
-                      
-                    </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with full stack development skills on the side. Share your ideas with him and he will make it happen.</p>
-           
-                
-                </div>
-            </div>
-        </div>
-        <!--detail-box-4----------------------------->
-        <div class="detail-box-4">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="./img/img1.jpg">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--cancel-btn---->
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <!--name-->
-                    <a href="#" class="detail-name">Daniel Radcliffe</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
-                  
-                
-                        
-                      
-                    </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with full stack development skills on the side. Share your ideas with him and he will make it happen.</p>
-           
-                
-                </div>
-            </div>
-        </div>
-        <!--detail-box-5----------------------------->
-        <div class="detail-box-5">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="./img/img1.jpg">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--cancel-btn---->
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <!--name-->
-                    <a href="#" class="detail-name">Daniel Radcliffe</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
-                    </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with full stack development skills on the side. Share your ideas with him and he will make it happen.</p>
-           
-                
-                </div>
-            </div>
-        </div>
-        <!--detail-box-6----------------------------->
-        <div class="detail-box-6">
-            <div class="member-detail-box">
-                <!--img---->
-                <div class="detail-box-img">
-                    <img src="./img/img1.jpg">
-                </div>
-                <!--text-->
-                <div class="detail-box-text">
-                    <!--cancel-btn---->
-                    <a href="javascript:void(0);" class="cancel">
-                        <i class="fas fa-times"></i>
-                    </a>
-                    <!--name-->
-                    <a href="#" class="detail-name">Daniel Radcliffe</a>
-                    <!--social-links-->
-                    <div class="member-social-links">
-                  
-                
-                        
-                      
-                    </div>
-                    <!--position---->
-                    <h5 class="position">Position: Executive Director</h5>
-                    <!--details--->
-                    <p>The man who pulls all the strings in making all your ideas come to live! If he says, its possible - it's possible. He's very dependable, energetic, humourous and passionate. Loves leading projects with full stack development skills on the side. Share your ideas with him and he will make it happen.</p>
-           
-                
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </section>
+{% block script %}
+<script src="{%static 'js/ourteam.js' %}"></script>
+{% endblock %}
 {% endblock %}
