--- a/backend/AU/templates/pages/aboutcompany.html
+++ b/backend/AU/templates/pages/aboutcompany.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/about.style.css' %}">
+{% endblock %}
 {% block content %}
 <div class="about-panel">
     <!-- <div class="hero-image" 
@@ -18,15 +21,15 @@
     <div class="container">
         <div class="about-section" >
             <div class="inner-container">
-                <h1>About Company</h1>
+                <h1>{{aboutcompany.about_title}}</h1>
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
+                  {{aboutcompany.about_description}}
                 </p>
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
+                  {{aboutcompany.about_description_sub}}
                 </p>
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
+                  {{aboutcompany.about_description_sub_I}}
                 </p>
             </div>
         </div>
@@ -59,27 +62,13 @@
       <h1 class="expert-title">Our Expert</h1>
     </div>
     <div class="row owl-carousel">
+      {% for AboutTeam in aboutteam %}
       <div class="col">
-        <img src="./img/img1.jpg" alt="Users Photo" class="about-img" id="img14" style="visibility:visible">
-        <p class="users-name">Shiva Giri</p>
-        <p class="job-title">JOb Title</p>
+        <img src="{{AboutTeam.profile_photo.url}}" alt="Users Photo" class="about-img" id="img14" style="visibility:visible">
+        <p class="users-name">{{AboutTeam.name}}</p>
+        <p class="job-title">{{AboutTeam.job_title}}</p>
       </div>
-      <div class="col">
-        <img src="./img/img2.jpg" alt=" Users Photo " class="about-img" id="img15" style="visibility:visible">
-        <p class="users-name">Nirmal Thing</p>
-        <p class="job-title">JOb Title</p>
-        <!-- <p class="testimonial-description">I’m writing to ask if you wouldn’t mind giving us a short testimonial for our website.</p> -->
-      </div>
-      <div class="col">
-        <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img16" style="visibility:visible">
-          <p class="users-name">Lalit BC</p>
-          <p class="job-title">JOb Title</p>
-      </div>
-      <div class="col">
-        <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img17" style="visibility:visible">
-          <p class="users-name">Nutan Panta</p>
-          <p class="job-title">JOb Title</p>
-      </div>
+      {% endfor %}
     </div>
   </div>
 </div>
@@ -99,4 +88,8 @@
 </div>
 </div>
 </section>
+{% block script %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="{%static 'js/about.js' %}"></script>
+{% endblock %}
 {% endblock %}
