--- a/backend/AU/templates/pages/aboutcompany.html
+++ b/backend/AU/templates/pages/aboutcompany.html
@@ -5,21 +5,26 @@
 {% endblock %}
 {% block content %}
 <div class="about-panel">
-    <!-- <div class="hero-image" 
-    style="background: url('../../AU/static/img/img1.jpg'); background-position: center center;
+    <div class="hero-image" 
+    style="background: url('{{aboutcompany.hero_img.url}}'); background-position: center center;
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-size: cover;
     height:70vh;
     filter: brightness(55%);"
-    > </div> -->
+    > </div>
     <div class="hero-image"></div>
     <h1 class="hero-img-title">About Us</h1>
 </div>
 <section>
 <div class="about-company">
     <div class="container">
-        <div class="about-section" >
+        <div class="about-section" style="
+        overflow: hidden;
+        background: url('{{aboutcompany.hero_img.url}}') no-repeat left;
+        background-size: 55%;
+        background-color: #fdfdfd;
+    " >
             <div class="inner-container">
                 <h1>{{aboutcompany.about_title}}</h1>
                 <p class="text">
