--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -17,8 +17,13 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="{% url 'about' %}">About Company</a></li>
               <li><a class="dropdown-item" href="{% url 'meetteam' %}">Meet Our Team</a></li>
-              <li><a class="dropdown-item" href="{% url 'MessageFromCEO' %}">Message From CEO</a></li>
-              <li><a class="dropdown-item" href="./messagefromdirector.html">Message From Director</a></li>
+              {% if message %}
+              {%for Message in message %}
+                <li><a class="dropdown-item" href="{% url 'messages' Message.id %}">{{Message.message_title}}</a></li>
+              {% endfor %}
+              {% else %}
+              <p>Message not found</p>
+              {% endif %}
             </ul>
           </li>
           <li class="nav-item dropdown">
