About us Page Complete

--- a/backend/AU/templates/pages/blog.html
+++ b/backend/AU/templates/pages/blog.html
@@ -1,6 +1,11 @@
+<head>
+  <meta property = "og:title" name="BLog" content="Title of Article">
+  <meta property="og:description" content = "What are meta tags?
+  Meta tags are HTML <meta> elements that contain metadata or data about the web page. 
+  This data includes inform…">
+</head>
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
 
 <div class="hero-image"></div>
