--- a/backend/AU/templates/pages/service.html
+++ b/backend/AU/templates/pages/service.html
@@ -1,20 +1,27 @@
+<head>
+  <meta property = "og:title" name="BLog" content="check">
+  <meta property="og:description" content = "What are meta tags?
+  Meta tags are HTML <meta> elements that contain metadata or data about the web page. 
+  This data includes inform…">
+</head>
 {% extends 'base.html' %}
 {% load static %}
-
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/service.css' %}">
+{% endblock %}
 {% block content %}
 <section>
     <div class="row">
         <div class="col-sm">
-            <img src="./img/img4.jpg" alt="" class="hero-img" width="100%">
+            <img src="{{service.hero_img.url}}" alt="" class="hero-img" width="100%">
         </div>
         <div class="col-sm">
-            <h1 class="hero-section-title">Test Preparation for Abroad Studies</h1>
-            <p class="hero-section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            <p class="hero-section-description-sub">Best Class in Tow</p>
+            <p class="hero-section-description">{{service.hero_title}}</p>
+            <p class="hero-section-description-sub">{{service.hero_slogan}}</p>
             <div class="col-sm">
-                <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> IELTS </Strong> or <Strong class="hero-course-title"> PTE </Strong> </p>
+                <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> {{service.hero_subject_name}} </Strong> or <Strong class="hero-course-title"> {{service.hero_subject_name_I}} </Strong> </p>
             </div>
-            <button class="hero-join-now-button">Join Now</button>
+            <button class="hero-join-now-button">{{service.hero_button_name}}</button>
         </div>
     </div>
 </section>
@@ -147,50 +154,19 @@
   <div class="container">
   <h1 class="expert-title">Courses</h1>
   <div class="course-row">
+    {% for Courses in courses %}
     <div class="course-col">
       <div class="course-description">
-        <h1 class="course-title" >English for Begginers</h1>
-      <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
-      <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-      <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
+        <h1 class="course-title" >{{Courses.course_name}}</h1>
+      <p class="course-teacher">By {{Courses.teacher_name}} | {{Courses.course_start_date}}</p>
+      <p class="course-des">{{Courses.course_description}}</p>
+      <a href="./enroll.html"><button class="hero-join-now-button">{{Courses.course_button_name}}</button></a>
       </div>
       <div class="course-description">
-        <img src="./img/img4.jpg" alt="">
+        <img src="{{Courses.course_img.url}}" alt="{{course_name}}" width="100%">
       </div>
     </div>
-    <div class="course-col">
-      <div class="course-description">
-        <h1 class="course-title" >English for Begginers</h1>
-      <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
-      <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-      <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
-      </div>
-      <div class="course-description">
-        <img src="./img/img4.jpg" alt="">
-      </div>
-    </div>
-    <div class="course-col">
-      <div class="course-description">
-        <h1 class="course-title" >English for Begginers</h1>
-      <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
-      <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-      <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
-      </div>
-      <div class="course-description">
-        <img src="./img/img4.jpg" alt="">
-      </div>
-    </div>
-    <div class="course-col">
-      <div class="course-description">
-        <h1 class="course-title" >English for Begginers</h1>
-      <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
-      <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-      <a href="./enroll.html"><button class="hero-join-now-button">Enroll Now</button></a>
-      </div>
-      <div class="course-description">
-        <img src="./img/img4.jpg" alt="">
-      </div>
-    </div>
+    {% endfor %}
   </div>
 </div>
 </section>
