--- a/backend/AU/templates/pages/blog.html
+++ b/backend/AU/templates/pages/blog.html
@@ -1,151 +1,67 @@
-<head>
-  <meta property = "og:title" name="BLog" content="Title of Article">
-  <meta property="og:description" content = "What are meta tags?
-  Meta tags are HTML <meta> elements that contain metadata or data about the web page. 
-  This data includes inform…">
-</head>
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-
+{% extends 'base.html' %} {% load static %} {% block css %}
+<link rel="stylesheet" href="{% static 'css/blog.css' %}" />
+{% endblock %} {% block content %}
 <div class="hero-image"></div>
-    <!-- blogs Start -->
-    <section id="blogs">
-      <div class="container">
-        <div class="row blog">
-            <div class="blog-left col-md-8 mt-5 mb-5">
-                <div id="content" class="blogContent">
-          <div class="blog">
-          <div class="blog-flex mt-5" onclick="location.href = 'blogDetails.html'">
-            <div class="blog-image">
-              <img src="./img/img2.jpg">
-            </div>
-            <div class="blog-description ps-4">
-              <h3 class=" pt-3">For a decade romeo lived alone</h3>
-              <div class="blog-span d-flex justify-content-start gap-4">
-              <div class="blog-releaseDate">
-              <i class="far fa-calendar" aria-hidden="true"></i>
-                <span>28 Mar 2020</span>
+<section id="blogs">
+  <div class="container">
+    <div class="row blog">
+      <div class="blog-left col-md-8 mt-5 mb-5">
+        <div id="content" class="blogContent">
+          {% for blog in blogs %}
+          <div
+            class="blog"
+            onclick="window.location.href=`{% url 'blogs' blog.id %}`"
+            key="{{blog.id}}"
+          >
+            <div class="blog-flex mt-5">
+              <div class="blog-image">
+                <img src="{{blog.blog_image.url}}" />
               </div>
-              <div class="blog-categories">
-                <i class="fas fa-bookmark" aria-hidden="true"></i>
-                <span>Nature</span>
+              <div class="blog-description ps-4">
+                <h3 class="pt-3">{{blog.blog_title}}</h3>
+                <div class="blog-span d-flex justify-content-start gap-4">
+                  <div class="blog-releaseDate">
+                    <i class="far fa-calendar" aria-hidden="true"></i>
+                    <span>{{blog.list_date}}</span>
+                  </div>
+                  <div class="blog-categories">
+                    <i class="fas fa-bookmark" aria-hidden="true"></i>
+                    <span>{{blog.blog_tag}}</span>
+                  </div>
+                  <div class="blog-categories">
+                    <i class="fas fa-user-alt" aria-hidden="true"></i>
+                    <span>{{blog.author}}</span>
+                  </div>
+                </div>
+                <p class="pe-2 pt-3">{{blog.blog_describe | truncatewords:25}}</p>
               </div>
-            </div>
-              <p class="pe-2 pt-3">Lorem ipsum dolor sitamet consectetur adipisicing elito sed do eiusmod tempore.amet consectetur
-         adipisicing elito sed do eiusmod tempore.
-           incididunt utlabore et dol...</p>
             </div>
           </div>
+          {% endfor %}
         </div>
-      
-          <div class="blog">
-          <div class="blog-flex mt-5" onclick="location.href = 'blogDetails.html'">
-            <div class="blog-image">
-              <img src="./img/img3.jpg">
-            </div>
-            <div class="blog-description ps-4">
-              <h3 class=" pt-3">The last summer days</h3>
-              <div class="blog-span d-flex justify-content-start gap-4">
-              <div class="blog-releaseDate">
-              <i class="far fa-calendar" aria-hidden="true"></i>
-                <span>28 Mar 2020</span>
-              </div>
-              <div class="blog-categories">
-                <i class="fas fa-bookmark" aria-hidden="true"></i>
-                <span>Nature</span>
-              </div>
-            </div>
-              <p class="pe-2 pt-3">Lorem ipsum dolor sitamet consectetur adipisicing elito sed do eiusmod tempore.amet consectetur
-         adipisicing elito sed do eiusmod tempore.
-        incididunt utlabore et dolore...</p>
-            </div>
-          </div>
-        </div>
-      
-          <div class="blog">
-          <div class="blog-flex mt-5" onclick="location.href = 'blogDetails.html'">
-            <div class="blog-image">
-              <img src="./img/img1.jpg">
-            </div>
-            <div class="blog-description ps-4">
-              <h3 class=" pt-3">Biological diversity convention manifesto</h3>
-              <div class="blog-span d-flex justify-content-start gap-4">
-              <div class="blog-releaseDate">
-              <i class="far fa-calendar" aria-hidden="true"></i>
-                <span>28 Mar 2020</span>
-              </div>
-              <div class="blog-categories">
-                <i class="fas fa-bookmark" aria-hidden="true"></i>
-                <span>Nature</span>
-              </div>
-            </div>
-              <p class="pe-2 pt-3">Lorem ipsum dolor sitamet consectetur adipisicing elito sed do eiusmod tempore.amet consectetur
-         adipisicing elito sed do eiusmod tempore.
-        incididunt utlabore et dolore...</p>
-            </div>
-          </div>
-        </div>
+        <nav class="paginate mt-4 mb-5" aria-label="Page navigation example">
+          <ul class="pagination justify-content-center">
+            <div id="blogPaginationNumbers" class="d-flex gap-3"></div>
+          </ul>
+        </nav>
       </div>
-                <nav class="paginate mt-4 mb-5" aria-label="Page navigation example">
-                  <ul class="pagination justify-content-center">
-                    <div id="blogPaginationNumbers" class="d-flex gap-3">
-              <li class="page-item">
-                  <a class="blog-paginate page-link active-blog-paginate" href="#">1</a>
-              </li>
-              <li class="page-item">
-                  <a class="blog-paginate page-link" href="#">2</a>
-              </li></div>
-                  </ul>
-                </nav>
-              </div>
-          <div class="blog-right col-md-4">
-            <h3>Recent Posts</h3>
-            <div class="recent-posts">
-              <div class="post-image">
-                <img src="./img/img1.jpg" alt="...">
-              </div>
-              <div class="post-info ps-3">
-                <span>28 Mar 2020</span>
-                <p><a href="blogDetails.html">The last summer days</a></p>
-              </div>
-            </div>
-            <div class="recent-posts">
-              <div class="post-image">
-                <img src="./img/img1.jpg" alt="...">
-              </div>
-              <div class="post-info ps-3">
-                <span>28 Mar 2020</span>
-                <p><a href="blogDetails.html">A Rare Frog Finds a Mate</a></p>
-              </div>
-            </div>
-            <div class="recent-posts">
-              <div class="post-image">
-                <img src="./img/img2.jpg" alt="...">
-              </div>
-              <div class="post-info ps-3">
-                <span>28 Mar 2020</span>
-                <p>
-                  <a href="blogDetails.html">Biological diversity convention manifesto</a>
-                </p>
-              </div>
-            </div>
-            <div class="recent-posts">
-              <div class="post-image">
-                <img src="./img/img3.jpg" alt="...">
-              </div>
-              <div class="post-info ps-3">
-                <span>28 Mar 2020</span>
-                <p>
-                  <a href="blogDetails.html">Protect the planet land and ocean</a>
-                </p>
-              </div>
-            </div>
+      <div class="blog-right col-md-4">
+        <h3>Recent Posts</h3>
+        {% for blog in blogs %}
+        <div class="recent-posts">
+          <div class="post-image">
+            <img src="{{blog.blog_image.url}}" alt="..." />
+          </div>
+          <div class="post-info ps-3">
+            <span>28 Mar 2020</span>
+            <p><a href="{% url 'blogs' blog.id %}">{{blog.blog_title}}</a></p>
           </div>
         </div>
+        {% endfor %}
       </div>
-    </section>
-    <!-- blog End -->
-
-
+    </div>
+  </div>
+</section>
+{% endblock %} {% block script %}
+<script src="{% static 'js/blog.js' %}"></script>
 {% endblock %}
