--- a/backend/AU/AU/static/css/contact.css
+++ b/backend/AU/AU/static/css/contact.css
@@ -53,7 +53,7 @@
 }
 .Contact-input_area input,
 .Contact-input_textarea textarea {
-  display: block;
+  display: block !important;
   width: 100%;
   color: #707070;
   font-weight: 500;
