--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./contact.html">Contact Us</a>
+            <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto social_icons">
