--- a/backend/AU/AU/static/css/enroll.css
+++ b/backend/AU/AU/static/css/enroll.css
@@ -50,6 +50,7 @@
   font-size: 15px;
   font-weight: 500;
   line-height: 1.5;
+  margin-bottom: 3px;
 }
 .Contact-input_area input,
 .Contact-input_textarea textarea {
@@ -144,7 +145,7 @@ select {
   -webkit-appearance: none;
   appearance: none;
   color: var(--baseFg);
-  border: 1px solid var(--baseFg);
+  border: 1px solid#ced4da;
   line-height: 1;
   outline: 0;
   padding: 1.65em 22.5em 1.55em 18.75em;
@@ -158,6 +159,8 @@ select {
   background-size: 1px 100%, 20px 22px, 20px 22px, 20px 100%;
   background-position: right 20px center, right bottom, right bottom,
     right bottom;
+  margin-top: 10px;
+  margin-bottom: 3px;
 }
 
 /* select:hover {
@@ -179,6 +182,13 @@ select:active {
 
 .english-profieiency-title {
   margin-top: -50px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.academic-background {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 @media (max-width: 1200px) {
