Adding Enroll Page

--- a/backend/AU/templates/pages/enroll.html
+++ b/backend/AU/templates/pages/enroll.html
@@ -40,7 +40,8 @@
                 name="full_name"
                 autocomplete="name"
                 placeholder="Your Name"
-                autofocus
+                autofocus 
+                required
               />
 
               <label for="email" class="-form-label font-weight-bold"
@@ -52,6 +53,7 @@
                 name="email"
                 autocomplete="email"
                 placeholder="Your Email"
+                required
               />
               <label for="number" class="-form-label font-weight-bold"
                 >Phone Number</label
@@ -62,6 +64,7 @@
                 name="number"
                 autocomplete="number"
                 placeholder="Your Phone Number"
+                required
               />
               <h1 class="academic-background">ACADEMIC BACKGROUND</h1>
             <label for="name" class="-form-label font-weight-bold"
@@ -75,6 +78,7 @@
                 autocomplete="name"
                 placeholder="Your Qualification"
                 autofocus
+                required
               />
               <label for="name" class="-form-label font-weight-bold"
                 >Which year was it completed?</label
@@ -87,6 +91,7 @@
                 autocomplete="name"
                 placeholder="Which year was it completed?"
                 autofocus
+                required
               />
               <label for="name" class="-form-label font-weight-bold"
                 >Grade/Percentage/GPA *
@@ -100,6 +105,7 @@
                 autocomplete="gpa"
                 placeholder="Grade/Percentage/GPA"
                 autofocus
+                required
               />
               <label for="name" class="-form-label font-weight-bold"
                 >Institution </label
@@ -112,6 +118,7 @@
                 autocomplete="Institution"
                 placeholder="Institution"
                 autofocus
+                required
               />
               <h1 class="academic-background">PARENT'S / SPONSOR's DETAILS</h1>
               <label for="name" class="-form-label font-weight-bold"
@@ -125,6 +132,7 @@
                 autocomplete="PARENT Name"
                 placeholder="Name, Occupation, Email and Contact number"
                 autofocus
+                required
               />
               <label for="name" class="-form-label font-weight-bold"
                 >Address</label
@@ -137,6 +145,7 @@
                 autocomplete="address"
                 placeholder="Address"
                 autofocus
+                required
               />             
 
             </div>
@@ -194,6 +203,7 @@
                 autocomplete="where_to_study"
                 placeholder="Where do you intend to study? Name the country and the city."
                 autofocus
+                required
               /> 
               <label for="name" class="-form-label font-weight-bold"
                 >Preferred course</label
@@ -206,6 +216,7 @@
                 autocomplete="preferred_course"
                 placeholder="Preferred course"
                 autofocus
+                required
               /> 
               <label for="name" class="-form-label font-weight-bold"
                 >Preferred Uni or College
@@ -219,6 +230,7 @@
                 autocomplete="preferred_uni"
                 placeholder="Preferred Uni or College
                 "
+                required
                 autofocus
               />
               <h1 class="academic-background">DECLARATION & AGREEMENT</h1>
@@ -248,6 +260,7 @@
               autocomplete="consult"
               placeholder="dd/mm/yy"
               autofocus
+              required
             />
             <label for="name" class="-form-label font-weight-bold"
                 >How did you hear about us?                  </label
@@ -260,6 +273,7 @@
                 autocomplete="know_us"
                 placeholder="How did you hear about us?                   "
                 autofocus
+                required
               />
           <div class="send_message">
             <button class="btn btn-outline-primary">Send Message</button>
