--- a/backend/AU/AU/static/css/index.css
+++ b/backend/AU/AU/static/css/index.css
@@ -171,6 +171,11 @@
     text-align: center;
 }
 
+.services-section a{
+  text-decoration: none;
+  list-style: none;
+}
+
 /*Blog slider*/
 .blog-slider {
   width: 95%;
