--- a/backend/AU/templates/base.html
+++ b/backend/AU/templates/base.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header class="header">
-        {% include 'partials/nav.html' with message=message visas=visas %}
+        {% include 'partials/nav.html' with message=message visas=visas service=service %}
     </header>
 
     {% block content %} {% endblock %}
