--- a/backend/AU/templates/pages/index.html
+++ b/backend/AU/templates/pages/index.html
@@ -33,22 +33,22 @@
           <div class="carousel-item active">
             <img src="{{img.slider_image.url}}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h2 class="animated bounceInRight" style="animation-delay:1s">Creative Agency</h2>
-              <p class="animated bounceInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
-                assumenda fugiat vel passet
+              <h2 class="animated bounceInRight" style="animation-delay:1s">{{img.slider_image_title}}</h2>
+              <p class="animated bounceInLeft" style="animation-delay: 2s">
+                {{img.slider_image_description}}
               </p>
-              <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+              <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">{{img.slider_image_button_name}}</a></p>
             </div>
           </div>
         {% else %}
         <div class="carousel-item">
           <img src="{{img.slider_image.url}}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h2 class="animated zoomIn" style="animation-delay: 1s">Multiple Awards</h2>
-            <p class="animated fadeInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
-              assumenda fugiat vel passet
+            <h2 class="animated zoomIn" style="animation-delay: 1s">{{img.slider_image_title}}</h2>
+            <p class="animated fadeInLeft" style="animation-delay: 2s"> 
+              {{img.slider_image_button_name}}
             </p>
-            <p class="animated zoomIn"><a href="#">Contact Us</a></p>
+            <p class="animated zoomIn"><a href="#">{{img.slider_image_button_name}}</a></p>
           </div>
         </div>
         {% endif %}
@@ -102,8 +102,8 @@
         </div>
         <div class="row">
             <!-- feaure box -->
-            <a href="{% url 'visafacts' visa.id %}">
               <div class="col-sm-6 col-lg-4">
+                <a href="{% url 'serviceDescription' 1 %}">
                 <div class="feature-box-1">
                     <div class="icon">
                       <i class="fa fa-users" aria-hidden="true"></i>
@@ -113,12 +113,14 @@
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
+              </a>
             </div>
-            </a>
+          
           
             <!-- / -->
             <!-- feaure box -->
             <div class="col-sm-6 col-lg-4">
+              <a href="{% url 'serviceDescription' 1 %}">
                 <div class="feature-box-1">
                     <div class="icon">
                       <i class="fa fa-graduation-cap" aria-hidden="true"></i>
@@ -128,56 +130,71 @@
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
+              </a>
             </div>
+           
             <!-- / -->
             <!-- feaure box -->
-            <div class="col-sm-6 col-lg-4">
+
+              <div class="col-sm-6 col-lg-4">
+                <a href="{% url 'serviceDescription' 1 %}">
+                  <div class="feature-box-1">
+                      <div class="icon">
+                        <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                      </div>
+                      <div class="feature-content">
+                          <h5>Student Visa Extension</h5>
+                          <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                      </div>
+                  </div>
+                </a>
+              </div>
+            
+
+           
+              <div class="col-sm-6 col-lg-4">
+                <a href="{% url 'serviceDescription' 1 %}">
                 <div class="feature-box-1">
                     <div class="icon">
-                      <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                      <i class="fa fa-university" aria-hidden="true"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Student Visa Extension</h5>
+                        <h5>Course & University Selection</h5>
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
+              </a>
             </div>
-
-          <div class="col-sm-6 col-lg-4">
-            <div class="feature-box-1">
-                <div class="icon">
-                  <i class="fa fa-university" aria-hidden="true"></i>
+            
+              <div class="col-sm-6 col-lg-4">
+                <a href="{% url 'serviceDescription' 1 %}">
+                <div class="feature-box-1">
+                    <div class="icon">
+                      <i class="fa fa-cogs" aria-hidden="true"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Migration Services</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
                 </div>
-                <div class="feature-content">
-                    <h5>Course & University Selection</h5>
-                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+              </a>
+            </div>
+           
+              <div class="col-sm-6 col-lg-4">
+                <a href="{% url 'serviceDescription' 1 %}">
+                <div class="feature-box-1">
+                    <div class="icon">
+                      <i class="fa fa-globe" aria-hidden="true"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Professional Year Program</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
                 </div>
+              </a>
             </div>
-        </div>
-
-      <div class="col-sm-6 col-lg-4">
-        <div class="feature-box-1">
-            <div class="icon">
-              <i class="fa fa-cogs" aria-hidden="true"></i>
-            </div>
-            <div class="feature-content">
-                <h5>Migration Services</h5>
-                <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-sm-6 col-lg-4">
-      <div class="feature-box-1">
-          <div class="icon">
-            <i class="fa fa-globe" aria-hidden="true"></i>
-          </div>
-          <div class="feature-content">
-              <h5>Professional Year Program</h5>
-              <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-          </div>
-      </div>
-  </div>
+           
+  
     </div>
     </div>
   </section>
