--- a/backend/AU/templates/pages/service.html
+++ b/backend/AU/templates/pages/service.html
@@ -13,18 +13,19 @@
 <section>
     <div class="row">
         <div class="col-sm">
-            <img src="{{service.hero_img.url}}" alt="" class="hero-img" width="100%">
+            <img src="{{services.hero_img.url}}" alt="" class="hero-img" width="100%">
         </div>
         <div class="col-sm">
-            <p class="hero-section-description">{{service.hero_title}}</p>
-            <p class="hero-section-description-sub">{{service.hero_slogan}}</p>
+            <p class="hero-section-description">{{services.hero_title}}</p>
+            <p class="hero-section-description-sub">{{services.hero_slogan}}</p>
             <div class="col-sm">
-                <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> {{service.hero_subject_name}} </Strong> or <Strong class="hero-course-title"> {{service.hero_subject_name_I}} </Strong> </p>
+                <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> {{services.hero_subject_name}} </Strong> or <Strong class="hero-course-title"> {{service.hero_subject_name_I}} </Strong> </p>
             </div>
-            <a href="{% url 'enroll' %}"><button class="hero-join-now-button">{{service.hero_button_name}}</button></a>
+            <a href="{% url 'enroll' %}"><button class="hero-join-now-button">{{services.hero_button_name}}</button></a>
         </div>
     </div>
 </section>
+<!---Services section-->
 <section class="section services-section" id="services">
   <div class="container">
       <div class="row">
@@ -36,8 +37,8 @@
       </div>
       <div class="row">
           <!-- feaure box -->
-          <div class="col-sm-6 col-lg-4">
-            <a href="./serviceDetail.html">
+            <div class="col-sm-6 col-lg-4">
+              <a href="{% url 'serviceDescription' 1 %}">
               <div class="feature-box-1">
                   <div class="icon">
                     <i class="fa fa-users" aria-hidden="true"></i>
@@ -49,9 +50,12 @@
               </div>
             </a>
           </div>
+        
+        
           <!-- / -->
           <!-- feaure box -->
           <div class="col-sm-6 col-lg-4">
+            <a href="{% url 'serviceDescription' 2 %}">
               <div class="feature-box-1">
                   <div class="icon">
                     <i class="fa fa-graduation-cap" aria-hidden="true"></i>
@@ -61,95 +65,75 @@
                       <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                   </div>
               </div>
+            </a>
           </div>
+         
           <!-- / -->
           <!-- feaure box -->
-          <div class="col-sm-6 col-lg-4">
+
+            <div class="col-sm-6 col-lg-4">
+              <a href="{% url 'serviceDescription' 3 %}">
+                <div class="feature-box-1">
+                    <div class="icon">
+                      <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Student Visa Extension</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
+                </div>
+              </a>
+            </div>
+          
+
+         
+            <div class="col-sm-6 col-lg-4">
+              <a href="{% url 'serviceDescription' 4 %}">
               <div class="feature-box-1">
                   <div class="icon">
-                    <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                    <i class="fa fa-university" aria-hidden="true"></i>
                   </div>
                   <div class="feature-content">
-                      <h5>Student Visa Extension</h5>
+                      <h5>Course & University Selection</h5>
                       <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                   </div>
               </div>
+            </a>
           </div>
           
-          <div class="col-sm-6 col-lg-4">
-            <div class="feature-box-1">
-                <div class="icon">
-                    <i class="fa fa-desktop"></i>
-                </div>
-                <div class="feature-content">
-                    <h5>PSW/Temporary Graduate Visa</h5>
-                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-lg-4">
-          <div class="feature-box-1">
-              <div class="icon">
-                <i class="fa fa-university" aria-hidden="true"></i>
+            <div class="col-sm-6 col-lg-4">
+              <a href="{% url 'serviceDescription' 1 %}">
+              <div class="feature-box-1">
+                  <div class="icon">
+                    <i class="fa fa-cogs" aria-hidden="true"></i>
+                  </div>
+                  <div class="feature-content">
+                      <h5>Migration Services</h5>
+                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                  </div>
               </div>
-              <div class="feature-content">
-                  <h5>Course & University Selection</h5>
-                  <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+            </a>
+          </div>
+         
+            <div class="col-sm-6 col-lg-4">
+              <a href="{% url 'serviceDescription' 1 %}">
+              <div class="feature-box-1">
+                  <div class="icon">
+                    <i class="fa fa-globe" aria-hidden="true"></i>
+                  </div>
+                  <div class="feature-content">
+                      <h5>Professional Year Program</h5>
+                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                  </div>
               </div>
+            </a>
           </div>
-      </div>
+         
 
-      <div class="col-sm-6 col-lg-4">
-        <div class="feature-box-1">
-            <div class="icon">
-              <i class="fa fa-cc-visa" aria-hidden="true"></i>
-            </div>
-            <div class="feature-content">
-                <h5>Visa Support</h5>
-                <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-sm-6 col-lg-4">
-      <div class="feature-box-1">
-          <div class="icon">
-            <i class="fa fa-cogs" aria-hidden="true"></i>
-          </div>
-          <div class="feature-content">
-              <h5>Migration Services</h5>
-              <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-          </div>
-      </div>
   </div>
-
-  <div class="col-sm-6 col-lg-4">
-    <div class="feature-box-1">
-        <div class="icon">
-          <i class="fa fa-globe" aria-hidden="true"></i>
-        </div>
-        <div class="feature-content">
-            <h5>Professional Year Program</h5>
-            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-        </div>
-    </div>
-</div>
-
-<div class="col-sm-6 col-lg-4">
-  <div class="feature-box-1">
-      <div class="icon">
-          <i class="fa fa-desktop"></i>
-      </div>
-      <div class="feature-content">
-          <h5>OSHC</h5>
-          <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
-      </div>
   </div>
-</div>
-</div>
-</div>
 </section>
+
 <section>
   <div class="container">
   <h1 class="expert-title">Courses</h1>
